{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 8,
  "lineage": "0e819ef5-4092-d431-c8d7-a4b7b791a4d8",
  "resources": [
    {
      "module": "module.ec2_prov",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00399ec92321828f5",
            "arn": "arn:aws:ec2:us-east-2:031926628442:instance/i-0c837b4d7dcf0d205",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c837b4d7dcf0d205",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Trf-pract",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02849243db33762d5",
            "private_dns": "ip-10-0-1-18.us-east-2.compute.internal",
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-18-119-132-57.us-east-2.compute.amazonaws.com",
            "public_ip": "18.119.132.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0151db1fa36c84eae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0171bad5716f4cb59",
            "tags": {
              "Name": "ec2-with-module"
            },
            "tags_all": {
              "Name": "ec2-with-module"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d2a2142036d9e7d5"
            ]
          },
          "dependencies": [
            "module.prod_vpc.aws_security_group.allow_ssh",
            "module.prod_vpc.aws_subnet.public_1",
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:031926628442:internet-gateway/igw-079bd888a7ccc66db",
            "id": "igw-079bd888a7ccc66db",
            "owner_id": "031926628442",
            "tags": {
              "Name": "internet-gateway-demo"
            },
            "tags_all": {
              "Name": "internet-gateway-demo"
            },
            "vpc_id": "vpc-000608bb9dd3f4be6"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:031926628442:route-table/rtb-0baf3a2ff56358829",
            "id": "rtb-0baf3a2ff56358829",
            "owner_id": "031926628442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079bd888a7ccc66db",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-demo"
            },
            "tags_all": {
              "Name": "public-route-table-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-000608bb9dd3f4be6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.gw",
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4b3595d4e0ced70",
            "route_table_id": "rtb-0baf3a2ff56358829",
            "subnet_id": "subnet-0171bad5716f4cb59"
          },
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.gw",
            "module.prod_vpc.aws_route_table.route-public",
            "module.prod_vpc.aws_subnet.public_1",
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:031926628442:security-group/sg-0d2a2142036d9e7d5",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2a2142036d9e7d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "031926628442",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-000608bb9dd3f4be6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:031926628442:subnet/subnet-0171bad5716f4cb59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0171bad5716f4cb59",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031926628442",
            "tags": {
              "Name": "public_1-demo"
            },
            "tags_all": {
              "Name": "public_1-demo"
            },
            "vpc_id": "vpc-000608bb9dd3f4be6"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:031926628442:vpc/vpc-000608bb9dd3f4be6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c070deff2183177f",
            "default_route_table_id": "rtb-01df7fca2ced4de6e",
            "default_security_group_id": "sg-0c9ba3c076a9e0a36",
            "dhcp_options_id": "dopt-bd5b39d6",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-000608bb9dd3f4be6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01df7fca2ced4de6e",
            "owner_id": "031926628442",
            "tags": {
              "Name": "Vpc-custom-demo"
            },
            "tags_all": {
              "Name": "Vpc-custom-demo"
            }
          }
        }
      ]
    }
  ]
}